chnages the to about page - together!!

--- a/HTML/css/drinksanddessert.css
+++ b/HTML/css/drinksanddessert.css
@@ -78,7 +78,7 @@ header {
 .right {
   transform: translate(0, 13%);
   right: 0;
-  background-image: url('https://i.imgur.com/OFprmIV.jpg');
+  background-image: url('https://i.imgur.com/LmivECQ.jpg');
   background-size: cover;
 }
 
