--- a/HTML/css/firstpage.css
+++ b/HTML/css/firstpage.css
@@ -1,33 +1,22 @@
-
-  /* Position text in the middle of the page/image */
-  .bg-text {
-    background: #FFF;
-    opacity:0.8;
-    color: black;
-    font-weight: bold;
-    border: 3px solid black;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 2;
-    width: 70%;
-    padding: 20px;
-    text-align: center;
-  }
-  .bg-image::before {
-    content: "";
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    background-image: url('http://www.doitinlondon.co.uk/files/2015/drink-and-food/Basement_state_un_bar_a_cocktails_et_desserts_a_trusterPRINC_2X.jpg');
-    background-size: cover;
-    filter: blur(2.5px);
-  }
+body{
+  background-image: url(https://www.theopensuitcase.com/wp-content/uploads/2018/06/pretty-happy-hour-cocktails.jpg);
+  background-size: cover;
+  filter: blur(0.8px);
+}
+ h1{
+   font-size: 150px;
+   color: white;
+   text-align: center;
+   opacity: 0.9;
+   margin: 60px;
+ }
 
   /*button*/
-  #button:hover{
-  	transform: scale(1.25)
-  }
+button{
+  transform: translate(420%,-90%);
+  border-radius: 2.5rem;
+  font-size: 1.5rem;
+  padding: 1rem 1.5rem;
+  background-color: #ff6dbb;
+  color: white;
+}
