--- a/HTML/css/homepagestyle.css
+++ b/HTML/css/homepagestyle.css
@@ -5,7 +5,7 @@ body{
 /* nav css */
 header {
 		background: #FFF;
-		height: 86px;
+		height: 70px;
 		position: fixed;
 		z-index: 1000;
 		width: 100%;
@@ -14,9 +14,9 @@ header {
 	}
 
 	.logo img{
-  width: 265px;
+  width: 100px;
   height: auto;
-  margin-top: 10px;
+  margin-top: 0px;
 	  }
 
 	.logo {
@@ -50,13 +50,14 @@ header {
     text-decoration: none;
 }
 .top-nav li a:hover{
-    color:red;
+    color:#ff6dbb;
 }
 .top-nav li a.active{
-		color: red;
+		color: #ff6dbb;
 		text-decoration: underline;
 }
 /* end of nav */
+/*button*/
 
 /* homepage information */
 #welcomehome{
